--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,18 @@
-Test
+    body {
+        background-color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        font-family: 'Parisienne', cursive;
+    }
+
+    h1 {
+        font-size: 4rem;
+        text-shadow: 0 0 10px #ff1493, 0 0 20px #ff1493, 0 0 30px #ff1493, 0 0 40px #ff1493, 0 0 50px #ff1493, 0 0 60px #ff1493, 0 0 70px #ff1493;
+        animation: blink 1.5s infinite;
+        color: #ff69b4;
+    }
+
+    @keyframes
