--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
             min-height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
         }
         .sparkly-text {
-            font-size: 3rem;
+            font-size: 4rem;
             text-align: center;
-            background-image: linear-gradient(90deg, #FF1493, #FF69B4);
-            -webkit-background-clip: text;
-            color: transparent;
-            animation: sparkle 1s ease-in-out infinite alternate;
+            color: #FF69B4;
+            text-shadow: 0 0 2px #FF69B4, 0 0 5px #FF69B4, 0 0 10px #FF1493;
+            animation: sparkle 1s ease-in-out infinite;
         }
         @keyframes sparkle {
             0% {
-                text-shadow: 0 0 10px #FF69B4, 0 0 20px #FF69B4, 0 0 30px #FF69B4, 0 0 40px #FF1493, 0 0 70px #FF1493, 0 0 80px #FF1493, 0 0 100px #FF1493, 0 0 150px #FF1493;
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.5;
             }
             100% {
-                text-shadow: 0 0 5px #FF69B4, 0 0 10px #FF69B4, 0 0 15px #FF69B4, 0 0 20px #FF1493, 0 0 35px #FF1493, 0 0 40px #FF1493, 0 0 50px #FF1493, 0 0 75px #FF1493;
+                opacity: 1;
             }
         }
     </style>
