--- a/index.html
+++ b/index.html
@@ -19,10 +19,21 @@
             background-image: linear-gradient(90deg, #FF0000, #FF7F00, #FFFF00, #00FF00, #0000FF, #4B0082, #8B00FF);
             -webkit-background-clip: text;
             color: transparent;
-            text-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
-            animation: sparkle 1s linear infinite;
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            animation: sparkle 2s linear infinite, background 2s linear infinite;
         }
         @keyframes sparkle {
+            0%, 20% {
+                text-shadow: 0 0 10px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.5), 0 0 40px rgba(255, 255, 255, 0.5), 0 0 50px rgba(255, 255, 255, 0.5);
+            }
+            50% {
+                text-shadow: none;
+            }
+            100%, 80% {
+                text-shadow: 0 0 10px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.5), 0 0 40px rgba(255, 255, 255, 0.5), 0 0 50px rgba(255, 255, 255, 0.5);
+            }
+        }
+        @keyframes background {
             0% {
                 background-position: 0% 50%;
             }
