--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            background-color: #f0f0f0;
+            background-color: #000000;
             font-family: 'Comic Sans MS', cursive, sans-serif;
         }
         .sparkly-text {
